Juhi Personal Website

--- a/Labs/PersonalPortfolio/about.html
+++ b/Labs/PersonalPortfolio/about.html
@@ -11,33 +11,40 @@
     <body>
         <header>
             <h1> Juhi Park </h1>
+            <a href="https://www.linkedin.com/in/juhipark/"><img src="img/linkedin.png" alt="Juhi's LinkedIn Profile URL" style="width:50px;height:50px;"></a>
+            <a href="https://github.com/juhipark"><img src="img/github.png" alt="Juhi's GitHub Profile URL" style="width:50px;height:50px;"></a>
         </header>
         <nav>
             <hr width="50%"/>
             <a href="index.html">Home</a>
             <a class="active" href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
         </nav>
         <br /><br />
         <div id="content">
+            <h2>Currently, I am working toward a B.S. in Computer Science with a concentration in Software Engineering from California State University, Monterey Bay. </h2>
+            <h2>I joined an award winning accelerated 3 years CS degree program called, CSin3. I currently hold multiple leadership positions by being educator and mentor in local communities. Being an academic tutor and an instructor, I acquired strong communication and leadership skills to become an adequate Software Engineer.</h2>
             <table>
                 <tr id="table-header">
-                    <td><strong>Programming Language</strong></td>
-                    <td><strong>Years Experience</strong></td>
+                    <td><strong>Role</strong></td>
+                    <td><strong>Detail</strong></td>
                 </tr>
                 <tr class="table-row">
-                    <td>Java</td>
-                    <td>3</td>
+                    <td>Computer Science, Software Engineering</td>
+                    <td>Demonstrate active promotion of minorities in STEM & raised CS awareness in local community</td>
                 </tr>
                 <tr class="table-row">
-                    <td>C++</td>
-                    <td>2</td>
+                    <td>Coder Dojo Instructor</td>
+                    <td>Teach programming fundamentals to K-12 students through lectures and hands-on activities</td>
                 </tr>
                 <tr class="table-row">
-                    <td>PHP</td>
-                    <td>1</td>
+                    <td>TA++</td>
+                    <td>Instruct learning activities and office hours for the core CS major course, Mathematics for Computing</td>
                 </tr>
             </table>
+            <h2></h2>
             <ul>
                 <li><span class="hobby">Programming</span>: I spend at least two hours every day using and learning programming languages.</li>
                 <li><span class="hobby">Youtube</span>: I love all cute animal compliation videos. (They are like therapy sessions for me)</li>
