--- a/Labs/PersonalPortfolio/index.html
+++ b/Labs/PersonalPortfolio/index.html
@@ -18,13 +18,17 @@ A footer with copyright info
     </head>
 
     <body>
-        <header>
+         <header>
             <h1> Juhi Park </h1>
+            <a href="https://www.linkedin.com/in/juhipark/"><img src="img/linkedin.png" alt="Juhi's LinkedIn Profile URL" style="width:50px;height:50px;"></a>
+            <a href="https://github.com/juhipark"><img src="img/github.png" alt="Juhi's GitHub Profile URL" style="width:50px;height:50px;"></a>
         </header>
         <nav>
             <hr width="50%"/>
             <a class="active" href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
         </nav>
         <br /><br />
