--- a/Labs/PersonalPortfolio/resume.html
+++ b/Labs/PersonalPortfolio/resume.html
@@ -4,8 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <title> Juhi Park: Personal Website </title>
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.min.css">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
 </head>
 
 <body>
@@ -19,12 +29,12 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a class="active" href="contact.html">Contact</a>
+        <a class="active" href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <br /><br />
     <div id="content">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdubir70odI7LSmj1pkTGgFcrzW3kiBbLH6OnRC-QUUrOD59g/viewform?embedded=true" width="640" height="1054" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="img/juhi_resume.pdf" width="640" height="1054" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <footer>
         <hr>
