--- a/Labs/PersonalPortfolio/contact.html
+++ b/Labs/PersonalPortfolio/contact.html
@@ -6,24 +6,31 @@
     <title> Juhi Park: Personal Website </title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-     <header>
-            <h1> Juhi Park </h1>
-            <a href="https://www.linkedin.com/in/juhipark/"><img src="img/linkedin.png" alt="Juhi's LinkedIn Profile URL" style="width:50px;height:50px;"></a>
-            <a href="https://github.com/juhipark"><img src="img/github.png" alt="Juhi's GitHub Profile URL" style="width:50px;height:50px;"></a>
-        </header>
+    <header>
+        <h1> Juhi Park </h1>
+        <a href="https://www.linkedin.com/in/juhipark/"><img src="img/linkedin.png" alt="Juhi's LinkedIn Profile URL" style="width:50px;height:50px;"></a>
+        <a href="https://github.com/juhipark"><img src="img/github.png" alt="Juhi's GitHub Profile URL" style="width:50px;height:50px;"></a>
+    </header>
     <nav>
         <hr width="50%" />
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
         <a class="active" href="contact.html">Contact</a>
     </nav>
     <br /><br />
-    <div id="content">
+    <div id="content" class="container">
+        <div id="contact_img">
+            <h2>To get in touch with me please fill out this form!!!</h2>
+            <img src="img/juhi_activity.png" alt="Picture of Juhi Park Activity" style="margin: auto;" />
+        </div>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdubir70odI7LSmj1pkTGgFcrzW3kiBbLH6OnRC-QUUrOD59g/viewform?embedded=true" width="640" height="1054" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <footer>
