--- a/Labs/PersonalPortfolio/resume.html
+++ b/Labs/PersonalPortfolio/resume.html
@@ -27,7 +27,7 @@
     <nav>
         <hr width="50%" />
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
         <a class="active" href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
