--- a/Labs/lab8/favorite.html
+++ b/Labs/lab8/favorite.html
@@ -20,12 +20,11 @@
     <!--Custom CSS Style-->
     <style type="text/css">
     </style>
-
 </head>
 
 <body>
     <div id="content" class="mx-auto text-center" style="width: 50%; ">
-        <h1>Image Gallery Page</h1>
+        <h1>View Favorite Page</h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="#">Menu</a>
@@ -35,33 +34,35 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="favorite.html">View Favroites</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">View Favroites <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
 
             </div>
         </nav>
 
-        <div class="input-group mb-3">
-            <input type="text" id="keyword_search_id" onchange="keyword_searched()" class="form-control" placeholder="Search Keyword" aria-label="Search" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <span class="input-group-text" id="i_search"><i class="fas fa-search" aria-hidden="true"></i></span>
-            </div>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">URL Link</th>
+                        <th scope="col">Keyword</th>
+                    </tr>
+                </thead>
+                <tbody id="tableBodyId">
+                </tbody>
+            </table>
         </div>
-
-
-        <div class="container" id="displayDiv">
-            
-        </div>
-
 
     </div>
 
-    <script src="js/function_index.js" type="text/javascript"></script>
+    <script src="js/function_favorite.js" type="text/javascript"></script>
+
 </body>
 
 </html>
