DB connection for heroku

--- a/Labs/lab8/favorite.html
+++ b/Labs/lab8/favorite.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
     <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-balham.css">
 
+    <!--sweet alert message-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
     <!--Custom CSS Style-->
     <style type="text/css">
     </style>
