--- a/Assignments/eventPictureGallery/auth/login.html
+++ b/Assignments/eventPictureGallery/auth/login.html
@@ -36,7 +36,7 @@
     <main class="d-flex align-items-center justify-content-center">
         <div class="card">
             <div class="card-body p-4">
-                <h1>Login</h1>
+                <h1>Email</h1>
                 <p class="text-muted">Access to Event Picture Gallery</p>
                 <form>
                     <div class="input-group mb-3">
